<resources>
    <string name="app_name">我的手机助手</string>
    <string name="menu_search" />
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="guide_1">全新改版</string>
    <string name="guide_2">视频购物</string>
    <string name="guide_3">评价晒图</string>

    <string name="error_unkown">未知错误</string>
    <string name="error_http">网络连接错误</string>
    <string name="error_system">服务器出错</string>
    <string name="error_account_freeze">账户被冻结，请联系管理员</string>
    <string name="error_api_no_perission">调用了无权限的API接口</string>
    <string name="error_login">用户名或者密码错误</string>
    <string name="error_http_400">bad request</string>
    <string name="error_http_404">服务器资源找不到</string>
    <string name="error_http_500">服务器错误</string>
    <string name="error_socket_timeout">网络超时</string>
    <string name="error_socket_unreachable">网络不可用</string>
    <string name="loading">加载中...</string>
    <string name="empty_data">暂无数据</string>
    <string name="hot_game">热门游戏</string>
    <string name="hot_top">热门主题</string>
    <string name="hot_app">热门应用</string>
    <string name="mobi">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="default_loading">loading</string>

    <string name="app_uninstall">应用卸载</string>
    <string name="download_manager">下载管理</string>
    <string name="apps_update">应用更新</string>
    <string name="sys_setting">系统设置</string>
    <string name="logining">正在登陆...</string>
    <string name="logout">退出登录</string>
    <string name="download">下载</string>
    <string name="manage">管理</string>
    <string name="error_token">登录失效，请重新登录</string>
    <string name="accessibility_service_description">智能安装，无需人工操作</string>
    <string name="smart_install">我的手机助手智能安装</string>
    <string name="search_hint">搜索</string>
    <string name="key_auto_check_apk_update">key_auto_check_apk_update</string>
    <string name="key_smart_install">key_smart_install</string>
    <string name="key_auto_delete_apk">key_auto_delete_apk</string>
    <string name="key_root_install">key_root_install</string>
    <string name="key_clear_cache">key_clear_cache</string>
    <string name="key_apk_download_dir">key_apk_download_dir</string>
    <string name="key_about_me">key_about_me</string>
</resources>
