<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">





    <PreferenceCategory android:title="安装与升级"
        android:layout="@layout/preference_category">



        <SwitchPreference android:key="@string/key_smart_install"
            android:title="智能安装"
            android:summary="支持Android 4.1以上，无需root权限"
            android:defaultValue="true"
            android:layout="@layout/preference_item"
            />


        <SwitchPreference android:key="@string/key_root_install"
            android:defaultValue="true"
            android:title="自动安装"
            android:summary="仅限root 用户"
            />


        <SwitchPreference android:key="@string/key_auto_delete_apk"
            android:defaultValue="false"
            android:title="下载安装成功后删除安装包"


            />

        <SwitchPreference android:key="@string/key_auto_check_apk_update"
            android:defaultValue="true"
            android:title="自动检测可升级的应用"
            android:summary="此功能会把你安装的应用列表发送到菜鸟窝服务器，用来查找最新版本的应用"

            />


    </PreferenceCategory>



    <PreferenceCategory android:title="基本设置"
        android:layout="@layout/preference_category"

        >

        <Preference
            android:key="@string/key_clear_cache"
            android:title="缓存清理"
            android:summary="安装包，图片等缓存"
            android:layout="@layout/preference_item"/>

        <Preference
            android:key="@string/key_apk_download_dir"
            android:title="安装包下载目录"
            android:summary="默认目录"
            />



    </PreferenceCategory>


    <Preference
        android:key="@string/key_about_me"
        android:title="关于我的手机助手"
        android:summary="版本：1.0.21"
        />



</PreferenceScreen>